fixed layout bug

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 	color: white;
 	font-family: Open Sans;
 	font-size: 18px; 
+
 }
 
 .row {
@@ -66,7 +67,7 @@
 	background-color: #f9fafb;
 	height: 320px;
 	border-color: #748aa1;
-	margin-left: 0%;
+	max-width: 100%;
 	
 
 
